--- a/MainWebApp/appsettings.json
+++ b/MainWebApp/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=MainWebDB;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "SmtpSettings": {
+    "Host": "****",
+    "Port": 0,
+    "Username": "****",
+    "Password": "****",
+    "FromAddress": "****"
+  }
 }
