add app info model

--- a/MainWebApp/MainWebApp.csproj
+++ b/MainWebApp/MainWebApp.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\Entity\Entity.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\media\images\logo\" />
+    <Folder Include="wwwroot\media\images\favicon\" />
+  </ItemGroup>
+
 </Project>
